--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,6 @@ custom.el
 company-statistics-cache.el
 /transient/history.el
 flyckeck_init.el
+/.dap-breakpoints
+/dap-python3-template.el
+/.lsp-session-v1
